<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AdminDashboardFragment">

    <!-- TextView for Admin Dashboard title -->
    <TextView
        android:id="@+id/tvAdminDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/app_header"
        android:gravity="center"
        android:text="ADMIN DASHBOARD"
        android:textColor="#CFA9A9"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRemoveProfiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Browse Profiles" />

    <Button
        android:id="@+id/btnBrowseEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Browse Events" />

    <Button
        android:id="@+id/btnBrowseImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Browse Images" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Back" />

</LinearLayout>
