<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/browse_event_Header"
            style="@style/headerViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_events" />

        <ListView
            android:id="@+id/list_of_events"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/sg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/singup" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="56dp"
        android:layout_height="50dp"
        android:layout_gravity="top|start"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/back_button"
        android:padding="8dp"
        android:src="@drawable/ic_back" />




</FrameLayout>